# azteroids

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
icons/: Azteroids.icns
src/: app.cpp  app.h  level.cpp  level.h  main.cpp  render.cpp  render.h
src/components/: attrition.h  azteroid.cpp  azteroid.h  geometry.h  identity.h  mass.h  momentum.h  particle.h  position.h  renderable.h
src/components/appearance/: appearance.h  asteroid.cpp  asteroid.h  laser.cpp  laser.h  particle.cpp  particle.h  ship.cpp  ship.h
src/entities/: usership.cpp  usership.h
src/events/: useraction.h
src/managers/: level.cpp  level.h
src/systems/: collision.cpp  collision.h  movement.cpp  movement.h  particle.cpp  particle.h  render.cpp
